# screensaver-bounce

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  build_helpers.rs
.github/workflows/: ci.yml
assets/: local76-bounce.desktop  local76-bounce.xml
scripts/: build.sh  release.sh
src/: bounce.rs  main.rs  tests_perf.rs
src/bounce/: bounce_tests.rs  draw_helpers.rs  mod.rs  panel_console.rs  panel_sys_info.rs  physics.rs  screensaver_impl.rs
