[package]
name = "bounce"
version = "2026.6.10-1"
edition = "2021"
description = "bounce - retro terminal screensaver effect"
autobins = false

[[bin]]
name = "bounce"
path = "src/main.rs"

[dependencies]
library = { git = "https://github.com/local76/library.git", tag = "v2026.6.10-1", features = ["screensaver-runtime"] }

[build-dependencies]
library = { git = "https://github.com/local76/library.git", tag = "v2026.6.10-1", features = ["screensaver-runtime"] }
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
name = "scene-bounce"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver effect (bounce) part of the screensavers collection."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/bounce", "usr/libexec/local76/screensavers/bounce", "755"],
    ["assets/local76-bounce.desktop", "usr/share/applications/local76-bounce.desktop", "644"],
    ["assets/local76-bounce.xml", "usr/share/xscreensaver/config/local76-bounce.xml", "644"],
    ["assets/local76-bounce.png", "usr/share/pixmaps/local76-bounce.png", "644"]
]

[package.metadata.generate-rpm]
name = "scene-bounce"
version = "2026.6.10-1"
release = "1"
arch = "x86_64"
summary = "bounce - retro terminal screensaver effect"
description = "Screensaver effect (bounce) part of the screensavers collection."
license = "MIT"
assets = [
    { source = "target/release/bounce", dest = "/usr/libexec/local76/screensavers/bounce", mode = "755" },
    { source = "assets/local76-bounce.desktop", dest = "/usr/share/applications/local76-bounce.desktop", mode = "644" },
    { source = "assets/local76-bounce.xml", dest = "/usr/share/xscreensaver/config/local76-bounce.xml", mode = "644" },
    { source = "assets/local76-bounce.png", dest = "/usr/share/pixmaps/local76-bounce.png", mode = "644" }
]
[patch."https://github.com/local76/library.git"]
library = { path = "../library" }
